--- a/demo/.classpath
+++ b/demo/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="/home/SLKTECHLABS/urvesh.gayakwad/Downloads/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/home/SLKTECHLABS/urvesh.gayakwad/Downloads/jackson-annotations-2.10.2.jar"/>
+	<classpathentry kind="lib" path="/home/SLKTECHLABS/urvesh.gayakwad/Downloads/jackson-core-2.10.2.jar"/>
+	<classpathentry kind="lib" path="/home/SLKTECHLABS/urvesh.gayakwad/Downloads/jackson-databind-2.10.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
